# solar-system

./: Cargo.toml
.cargo/: config.toml
assets/shaders/: saturn_rings.wgsl
data/: compiled_data.json  data.py
data/responses/: Adrastea – 515.txt  Amalthea – 505.txt  Callisto – 504.txt  Ceres – 2000001.txt  Deimos – 402.txt  Earth – 399.txt  Eris – 136199.txt  Europa – 502.txt  Ganymede – 503.txt  Haumea – 136108.txt  Io – 501.txt  Jupiter – 599.txt  Makemake – 136472.txt  Mars – 499.txt  Mercury – 199.txt  Metis – 516.txt  Moon – 301.txt  Neptune – 899.txt  Phobos – 401.txt  Pluto – 999.txt  Saturn – 699.txt  Sun – 10.txt  Thebe – 514.txt  Uranus – 799.txt  Venus – 299.txt
macros/src/: lib.rs
src/: body.rs  main.rs  planet.rs  planets.rs  trajectory.rs  ui.rs
src/material/: mod.rs  saturn_rings.rs
src/simulation/: body.rs  collision.rs  data.rs  gizmo.rs  mod.rs  physics.rs  player.rs  settings.rs  setup.rs  trajectory.rs  util.rs
src/spawn/: mod.rs
src/ui/: left_window.rs  mod.rs  name_tag.rs  right_window.rs  spawn_ui.rs  util.rs
src/ui/element/: button.rs  dropdown.rs  flex.rs  input.rs  mod.rs  rect.rs  root.rs  text.rs  window.rs
src/ui/flex/: flex1.rs  flex2.rs  flex_row.rs  flex_row_test.rs  mod.rs
src/ui/window/: mod.rs  spawn_window.rs  test_window.rs
